--- a/html/PBWIV/PBWIV010001.html
+++ b/html/PBWIV/PBWIV010001.html
@@ -78,7 +78,7 @@
 					<button type="button" class="header-btn" aria-label="뒤로 가기"><i class="i-back"></i></button>
 				</div>
 				<div class="center">
-					<h1>종합주요지수</h1>
+					<h1>지수 상세</h1>
 				</div>
 				<div class="right">
 					<button type="button" class="header-btn" aria-label="메뉴 열기"><i class="i-menu"></i></button>
@@ -104,119 +104,86 @@
 						}
 					</style>
 
-					<!-- tab-content -->
-					<div class="tab-content tab-fluid">
-						<ul class="tab-list tab-col overflow-list px24" role="tablist">
-							<li class="tab tab-active"><a role="tab" href="#">주요지수</a></li>
-							<li class="tab"><a role="tab" href="#">주가지수</a></li>
-							<li class="tab"><a role="tab" href="#">채권금리</a></li>
-							<li class="tab"><a role="tab" href="#">환율/원자재</a></li>
-							<li class="tab"><a role="tab" href="#">경제지표</a></li>
-							<li class="tab"><a role="tab" href="#">섹터지수</a></li>
-							<li class="tab"><a role="tab" href="#">관심</a></li>
-						</ul>
-					</div>
-					<!-- //tab-content -->
+					<div class="stock-detail">
+						<div class="stock-detail-title">
+							<dl>
+								<dt><strong class="headline-medium">코스피</strong></dt>
+								<dd>
+									<strong class="headline-large">9,999.99</strong>
+									<div class="stock rise" aria-label="등락폭(상승)">888.88</div>
+									<!-- <div class="stock fall" aria-label="등락폭(하락)">888.88</div> -->
+									<!-- <div class="stock steady" aria-label="등락폭(보합)">00.00</div> -->
 
-					<div class="stock-index pt16">
-						<div class="body-caption px4 ar">2024-10-15 기준</div>
-
-						<div class="stock-index-core mt8">
-							<ul>
-								<li>
-									<a href="#">
-										<dl>
-											<dt>코스피</dt>
-											<dd>
-												<strong>9,999.99</strong>
-												<div class="stock rise" aria-label="등락폭(상승)">888.88</div>
-											</dd>
-											<dd>
-												<div class="tags tags-small tags-red-100" aria-label="등락율">+99.99%</div>
-											</dd>
-										</dl>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<dl>
-											<dt>코스닥</dt>
-											<dd>
-												<strong>9,999.99</strong>
-												<div class="stock fall" aria-label="등락폭(하락)">888.88</div>
-											</dd>
-											<dd>
-												<div class="tags tags-small tags-red-100" aria-label="등락율">+99.99%</div>
-											</dd>
-										</dl>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<dl>
-											<dt>미국 USD</dt>
-											<dd>
-												<strong>9,999.99</strong>
-												<div class="stock steady" aria-label="등락폭(보합)">00.00</div>
-											</dd>
-											<dd>
-												<div class="tags tags-small tags-red-100" aria-label="등락율">00.00</div>
-											</dd>
-										</dl>
-									</a>
-								</li>
-							</ul>
+									<div class="tags tags-small tags-red-100" aria-label="등락율">+99.99%</div>
+									<!-- <div class="tags tags-small tags-deepBlue" aria-label="등락율">00.00</div> -->
+									<!-- <div class="tags tags-small tags-lightGray" aria-label="등락율">00.00</div> -->
+								</dd>
+							</dl>
 						</div>
 
-						<div class="stock-index-list mt16">
-							<ul>
-								<li>
-									<a href="#">
-										<dl>
-											<dt>코스피200</dt>
-											<dd>9,999.99</dd>
-										</dl>
-										<div>
-											<div class="stock rise" aria-label="등락폭(상승)">00.00</div>
-											<div class="tags tags-small tags-red-100" aria-label="등락율">00.00</div>
-										</div>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<dl>
-											<dt>코스피200</dt>
-											<dd>9,999.99</dd>
-										</dl>
-										<div>
-											<div class="stock fall" aria-label="등락폭(하락)">100.00</div>
-											<div class="tags tags-small tags-red-100" aria-label="등락율">00.00</div>
-										</div>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<dl>
-											<dt>코스피200</dt>
-											<dd>9,999.99</dd>
-										</dl>
-										<div>
-											<div class="stock steady" aria-label="등락폭(보합)">00.00</div>
-											<div class="tags tags-small tags-red-100" aria-label="등락율">00.00</div>
-										</div>
-									</a>
-								</li>
-							</ul>
+						<div class="favorite-btn-wrap" data-toggle="toggle-wrap">
+							<button type="button" data-toggle="toggle-trigger" id="success">
+								<i class="icon-only icon-36 icon-fav" data-switch-inner="true" data-switch-inner-before="icon-fav" data-switch-inner-after="icon-fav-active"></i>
+								<span class="toggle-off blind">관심펀드 등록</span>
+								<span class="toggle-on blind">관심펀드 등록해제</span>
+							</button>
 						</div>
 
-						<p class="description caution body-small fc-typography-caption mt16">장 시작(8:30~9:30)과 장마감(15:00~16:00)중에는 일부 투자금액이 맞지 않을 수 있습니다.</p>
-					</div>
+						<div class="stock-graph py32 px16 mt24">
 
+							<div class="">
+								<div style="height:180px;">
+									<div id="chart2" data-aos="" data-aos-id="chart2" class="aos-init aos-animate" style="min-height: 195px;"></div>
+								</div>
+							</div>
+
+							<!-- tab-content -->
+							<div class="tab-content">
+								<ul class="tab-list tab-button" role="tablist">
+									<li class="tab tab-active"><a role="tab" href="#" aria-selected="true">1주일</a></li>
+									<li class="tab"><a role="tab" href="#" aria-selected="false">3개월</a></li>
+									<li class="tab"><a role="tab" href="#" aria-selected="false">1년</a></li>
+									<li class="tab"><a role="tab" href="#" aria-selected="false">3년</a></li>
+									<li class="tab"><a role="tab" href="#" aria-selected="false">5년</a></li>
+								</ul>
+							</div>
+							<!-- //tab-content -->
+
+							<div class="stroke px0 mt24"></div>
+							<dl class="group pb0">
+								<dt class="fs-18 fw-400 px-4">기초종가</dt>
+								<dd class="fs-18 fw-400 fc-status-info">9999.99</dd>
+							</dl>
+							<dl class="group pb0 pt12">
+								<dt class="fs-18 fw-400 px-4">기말종가</dt>
+								<dd class="fs-18 fw-400 fc-status-info">9999.99</dd>
+							</dl>
+							<dl class="group pb0 pt12">
+								<dt class="fs-18 fw-400 px-4">기간 최고(일)</dt>
+								<dd class="fs-18 fw-400 fc-status-info">9999.99(2024-11-21)</dd>
+							</dl>
+							<dl class="group pb0 pt12">
+								<dt class="fs-18 fw-400 px-4">기간 최저(일)</dt>
+								<dd class="fs-18 fw-400 fc-status-info">9999.99(2024-11-21)</dd>
+							</dl>
+
+							<div class="stroke px0 mt24"></div>
+
+							<div class="btn-wrap flex-column pt24 pb0">
+								<button type="button" class="btn-small btn-outlined btn-round w100" data-micromodal-trigger="modal-daily-stock">일자별 보기</button>
+								<button type="button" class="btn-small btn-outlined btn-round w100">시장지수 비교</button>
+								<button type="button" class="btn-small btn-outlined btn-round w100">환율정보상세</button>
+							</div>
+						</div>
+					</div>
 
 				</div>
-				<!-- //content -->
+
+
 			</div>
-			<!-- //container -->
+			<!-- //content -->
+		</div>
+		<!-- //container -->
 
 
 		</div>
@@ -228,6 +195,233 @@
 	</main>
 	<!-- //main -->
 
+	<!-- micromodal -->
+	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-daily-stock">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+			<div class="modal__container" role="dialog" aria-modal="true">
+				<div class="modal__header">
+					<strong class="modal__title title-large">일자별 보기</strong>
+					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
+				</div>
+				<div class="modal__content">
+					<div class="content">
+
+						<div class="table-col">
+							<table class="table-layout-auto">
+								<caption>일자별 보기</caption>
+								<tbody>
+									<tr>
+										<th scope="row">
+											<div class="d-flex a-center gap2">
+												<div>2023-11-10</div>
+												<div class="tags tags-small tags-red-100" aria-label="등락율">기간최고</div>
+											</div>
+										</th>
+										<td>9999.99</td>
+										<td>
+											<div class="stock rise" aria-label="등락폭(상승)">888.88</div>
+										</td>
+									</tr>
+									<tr>
+										<th scope="row">
+											<div class="d-flex a-center gap2">
+												<div>2023-11-09</div>
+												<div class="tags tags-small tags-deepBlue" aria-label="등락율">기간최저</div>
+											</div>
+										</th>
+										<td>9999.99</td>
+										<td>
+											<div class="stock fall" aria-label="등락폭(하락)">888.88</div>
+										</td>
+									</tr>
+									<tr>
+										<th scope="row">
+											<div class="d-flex a-center gap2">
+												<div>2023-11-08</div>
+											</div>
+										</th>
+										<td>9999.99</td>
+										<td>
+											<div class="stock steady" aria-label="등락폭(보합)">00.00</div>
+										</td>
+									</tr>
+									<tr>
+										<th scope="row">
+											<div class="d-flex a-center gap2">
+												<div>2023-11-08</div>
+											</div>
+										</th>
+										<td>9999.99</td>
+										<td>
+											<div class="stock steady" aria-label="등락폭(보합)">00.00</div>
+										</td>
+									</tr>
+									<tr>
+										<th scope="row">
+											<div class="d-flex a-center gap2">
+												<div>2023-11-08</div>
+											</div>
+										</th>
+										<td>9999.99</td>
+										<td>
+											<div class="stock steady" aria-label="등락폭(보합)">00.00</div>
+										</td>
+									</tr>
+									<tr>
+										<th scope="row">
+											<div class="d-flex a-center gap2">
+												<div>2023-11-08</div>
+											</div>
+										</th>
+										<td>9999.99</td>
+										<td>
+											<div class="stock steady" aria-label="등락폭(보합)">00.00</div>
+										</td>
+									</tr>
+									<tr>
+										<th scope="row">
+											<div class="d-flex a-center gap2">
+												<div>2023-11-08</div>
+											</div>
+										</th>
+										<td>9999.99</td>
+										<td>
+											<div class="stock steady" aria-label="등락폭(보합)">00.00</div>
+										</td>
+									</tr>
+									<tr>
+										<th scope="row">
+											<div class="d-flex a-center gap2">
+												<div>2023-11-08</div>
+											</div>
+										</th>
+										<td>9999.99</td>
+										<td>
+											<div class="stock steady" aria-label="등락폭(보합)">00.00</div>
+										</td>
+									</tr>
+									<tr>
+										<th scope="row">
+											<div class="d-flex a-center gap2">
+												<div>2023-11-08</div>
+											</div>
+										</th>
+										<td>9999.99</td>
+										<td>
+											<div class="stock steady" aria-label="등락폭(보합)">00.00</div>
+										</td>
+									</tr>
+									<tr>
+										<th scope="row">
+											<div class="d-flex a-center gap2">
+												<div>2023-11-08</div>
+											</div>
+										</th>
+										<td>9999.99</td>
+										<td>
+											<div class="stock steady" aria-label="등락폭(보합)">00.00</div>
+										</td>
+									</tr>
+									<tr>
+										<th scope="row">
+											<div class="d-flex a-center gap2">
+												<div>2023-11-08</div>
+											</div>
+										</th>
+										<td>9999.99</td>
+										<td>
+											<div class="stock steady" aria-label="등락폭(보합)">00.00</div>
+										</td>
+									</tr>
+									<tr>
+										<th scope="row">
+											<div class="d-flex a-center gap2">
+												<div>2023-11-08</div>
+											</div>
+										</th>
+										<td>9999.99</td>
+										<td>
+											<div class="stock steady" aria-label="등락폭(보합)">00.00</div>
+										</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- //micromodal -->
+
+
+
+	<script>
+		$('#success').click(function(event) {
+			if ($(this).closest('.favorite-btn-wrap').hasClass('is-toggled')) {
+				toastr.caution(``, '관심지수에서 삭제되었습니다.', {
+					"extendedTimeOut": 0,
+					"preventDuplicates": false,
+					"disableTimeOut": true,
+				});
+			} else {
+				toastr.success(``, '관심지수에 등록되었습니다', {
+					"extendedTimeOut": 0,
+					"preventDuplicates": false,
+					"disableTimeOut": true,
+				});
+			}
+		});
+	</script>
+
+	<script>
+		var options2 = {
+			series: [{
+				name: "신한글로벌탄소중립솔루션증권투자신탁(H)(주식)",
+				data: [10, 41, 35, 51, 49, 62, 69, 91, 148],
+
+			}, ],
+			chart: {
+				height: 180,
+				type: 'line',
+				zoom: {
+					enabled: false
+				},
+				toolbar: {
+					show: false,
+				}
+			},
+			colors: ['#7163EE', '#F35E9C', '#1AA3C1'],
+			dataLabels: {
+				enabled: false
+			},
+			stroke: {
+				curve: 'smooth',
+				width: [2, 2]
+			},
+			markers: {
+				size: 4,
+			},
+			grid: {
+				row: {
+					// colors: ['#E9ECEF', 'transparent'], // takes an array which will be repeated on columns
+					// opacity: 0.5
+				},
+			},
+			xaxis: {
+				categories: ['', '', '', '', '', '', '', '', ''],
+			}
+		};
+
+		var chart2 = new ApexCharts(document.querySelector("#chart2"), options2);
+
+		document.addEventListener('aos:in:chart2', ({
+			detail
+		}) => {
+			chart2.render();
+		});
+	</script>
 
 </body>
 
