--- a/html/index.html
+++ b/html/index.html
@@ -912,6 +912,14 @@
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWIV010001</a></td>
 					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td>주가지수</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWIV020000</a></td>
+					</tr>
 				</tbody>
 			</table>
 		</div>
