--- a/html/PBWFI/PBWFI040000.html
+++ b/html/PBWFI/PBWFI040000.html
@@ -130,17 +130,6 @@
 					</div>
 					<!-- //form -->
 
-					<!-- form -->
-					<div class="form mt16">
-						<div class="form-exchange">
-							<div class="label">환율우대율<i class="icon-only icon-24 icon-percent bg-icon-default"></i></div>
-							<div class="ex-input-wrap d-flex">
-								<button type="button" class="anchor chevron anchor-fluid" data-micromodal-trigger="modal-alert2">30%</button>
-							</div>
-						</div>
-					</div>
-					<!-- //form -->
-
 					<!-- btn-wrap -->
 					<div class="btn-wrap bg-transparent py0 my32">
 						<button type="button" class="btn-medium btn-primary btn-round" style="max-width:130px;"><i class="ico-check"></i>조회</button>
@@ -283,11 +272,6 @@
 									</div>
 									<div class="inp">
 										<label>
-											<input type="radio" name="rad001" aria-label="90%">
-										</label>
-									</div>
-									<div class="inp">
-										<label>
 											<input type="radio" name="rad001" aria-label="50%">
 										</label>
 									</div>
@@ -311,117 +295,9 @@
 											<input type="radio" name="rad001" aria-label="10%">
 										</label>
 									</div>
-								</div>
-							</div>
-						</div>
-						<!-- //group-form -->
-
-						<!-- group-form -->
-						<div class="group-form mt16">
-							<div class="group-title py16 px8">
-								<strong class="title-large px0">직접 입력</strong>
-							</div>
-							<div class="group-content mt0">
-								<div class="form">
-									<div class="input-wrap input-placeholder disabled">
-										<input type="number" class="ar" placeholder="우대율 입력" aria-label="우대율 직접 입력" disabled>
-										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
-										<div class="visible-placeholder">%</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<!-- //group-form -->
-
-					</div>
-				</div>
-				<div class="modal__footer modal__footer_alert">
-					<!-- bottom-btn -->
-					<div class="bottom-btn">
-						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-primary" data-micromodal-close><i class="ico-check"></i>저장</button>
-						</div>
-					</div>
-					<!-- //bottom-btn -->
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- //micromodal -->
-
-
-	<!-- micromodal -->
-	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-alert2">
-		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
-			<div class="modal__container" role="dialog" aria-modal="true">
-
-				<div class="modal__header modal__header__alert">
-					<strong class="modal__title title-large">환율우대율 선택</strong>
-					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
-				</div>
-				<div class="modal__content modal__content__alert">
-					<div class="content">
-
-						<!-- group-form -->
-						<div class="group-form">
-							<div class="group-title py16 px8">
-								<strong class="title-large px0">우대율 선택</strong>
-							</div>
-							<div class="group-content mt0">
-								<div class="inp-round">
 									<div class="inp">
 										<label>
-											<input type="radio" name="rad001" aria-label="없음" disabled>
-										</label>
-									</div>
-									<div class="inp">
-										<label>
-											<input type="radio" name="rad001" aria-label="90%" disabled>
-										</label>
-									</div>
-									<div class="inp">
-										<label>
-											<input type="radio" name="rad001" aria-label="80%" disabled>
-										</label>
-									</div>
-									<div class="inp">
-										<label>
-											<input type="radio" name="rad001" aria-label="70%" disabled>
-										</label>
-									</div>
-									<div class="inp">
-										<label>
-											<input type="radio" name="rad001" aria-label="60%" disabled>
-										</label>
-									</div>
-									<div class="inp">
-										<label>
-											<input type="radio" name="rad001" aria-label="90%" disabled>
-										</label>
-									</div>
-									<div class="inp">
-										<label>
-											<input type="radio" name="rad001" aria-label="50%" disabled>
-										</label>
-									</div>
-									<div class="inp">
-										<label>
-											<input type="radio" name="rad001" aria-label="40%" disabled>
-										</label>
-									</div>
-									<div class="inp">
-										<label>
-											<input type="radio" name="rad001" aria-label="30%" disabled>
-										</label>
-									</div>
-									<div class="inp">
-										<label>
-											<input type="radio" name="rad001" aria-label="20%" disabled>
-										</label>
-									</div>
-									<div class="inp">
-										<label>
-											<input type="radio" name="rad001" aria-label="10%" disabled>
+											<input type="radio" name="rad001" aria-label="직접 입력">
 										</label>
 									</div>
 								</div>
@@ -430,14 +306,11 @@
 						<!-- //group-form -->
 
 						<!-- group-form -->
-						<div class="group-form mt16">
-							<div class="group-title py16 px8">
-								<strong class="title-large px0">직접 입력</strong>
-							</div>
+						<div class="group-form mt24">
 							<div class="group-content mt0">
 								<div class="form">
 									<div class="input-wrap input-placeholder">
-										<input type="number" class="ar" placeholder="우대율 입력" aria-label="우대율 직접 입력" value="100">
+										<input type="number" class="ar" placeholder="우대율 입력" aria-label="우대율 직접 입력">
 										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 										<div class="visible-placeholder">%</div>
 									</div>
@@ -461,6 +334,7 @@
 		</div>
 	</div>
 	<!-- //micromodal -->
+
 
 </body>
 
