--- a/html/PBWCA/PBWCA010000_month.html
+++ b/html/PBWCA/PBWCA010000_month.html
@@ -417,12 +417,12 @@
 							<div class="group-content">
 								<div class="inp-group py24 gap0">
 									<div class="inp inp-medium inp-combi">
-										<label style="flex:none;">
+										<label>
 											<input type="radio" name="rad003">
 											<span class="label-title">종료일 지정</span>
 										</label>
 										<!-- 종료일 지정 체크 시 활성화 -->
-										<div class="form" style="flex:none;width:180px;">
+										<div class="form" style="width:180px;">
 											<div class="input-wrap input-datepicker input-medium">
 												<button type="button" aria-label="날짜 선택">2024-01-01</button>
 											</div>
