--- a/html/PBWBU/PBWBU010001.html
+++ b/html/PBWBU/PBWBU010001.html
@@ -179,270 +179,6 @@
 								</div>
 							</figure>
 						</div>
-						<div class="business-card-customer">
-							<button>
-								<strong class="title-medium">이름</strong>
-								<span class="divide-list">
-									<span>부서명</span>
-									<span class="division h14 mx8"></span>
-									<span>직책</span>
-								</span>
-								<span class="company-name">회사명</span>
-							</button>
-							<figure>
-								<div class="due-date">
-									<strong class="body-small">만료일</strong>
-									<div class="tags tags-small tags-lightBlue">D-30</div>
-								</div>
-								<div class="thumb">
-									<button type="button" class="btn-xsmall btn-black btn-round" onclick="toastr.success(``, '연장되었습니다.');">연장하기</button>
-									<picture>
-										<source srcset="/resources/@temp/thumb_w.png">
-										<img src="/resources/@temp/thumb_w.png" alt="">
-									</picture>
-								</div>
-							</figure>
-						</div>
-						<div class="business-card-customer">
-							<button>
-								<strong class="title-medium">이름</strong>
-								<span class="divide-list">
-									<span>부서명</span>
-									<span class="division h14 mx8"></span>
-									<span>직책</span>
-								</span>
-								<span class="company-name">회사명</span>
-							</button>
-							<figure>
-								<div class="due-date">
-									<strong class="body-small">만료일</strong>
-									<div class="tags tags-small tags-lightBlue">D-30</div>
-								</div>
-								<div class="thumb">
-									<button type="button" class="btn-xsmall btn-black btn-round" onclick="toastr.success(``, '연장되었습니다.');">연장하기</button>
-									<picture>
-										<source srcset="/resources/@temp/thumb_w.png">
-										<img src="/resources/@temp/thumb_w.png" alt="">
-									</picture>
-								</div>
-							</figure>
-						</div>
-						<div class="business-card-customer">
-							<button>
-								<strong class="title-medium">이름</strong>
-								<span class="divide-list">
-									<span>부서명</span>
-									<span class="division h14 mx8"></span>
-									<span>직책</span>
-								</span>
-								<span class="company-name">회사명</span>
-							</button>
-							<figure>
-								<div class="due-date">
-									<strong class="body-small">만료일</strong>
-									<div class="tags tags-small tags-lightBlue">D-30</div>
-								</div>
-								<div class="thumb">
-									<button type="button" class="btn-xsmall btn-black btn-round" onclick="toastr.success(``, '연장되었습니다.');">연장하기</button>
-									<picture>
-										<source srcset="/resources/@temp/thumb_w.png">
-										<img src="/resources/@temp/thumb_w.png" alt="">
-									</picture>
-								</div>
-							</figure>
-						</div>
-						<div class="business-card-customer">
-							<button>
-								<strong class="title-medium">이름</strong>
-								<span class="divide-list">
-									<span>부서명</span>
-									<span class="division h14 mx8"></span>
-									<span>직책</span>
-								</span>
-								<span class="company-name">회사명</span>
-							</button>
-							<figure>
-								<div class="due-date">
-									<strong class="body-small">만료일</strong>
-									<div class="tags tags-small tags-lightBlue">D-30</div>
-								</div>
-								<div class="thumb">
-									<button type="button" class="btn-xsmall btn-black btn-round" onclick="toastr.success(``, '연장되었습니다.');">연장하기</button>
-									<picture>
-										<source srcset="/resources/@temp/thumb_w.png">
-										<img src="/resources/@temp/thumb_w.png" alt="">
-									</picture>
-								</div>
-							</figure>
-						</div>
-						<div class="business-card-customer">
-							<button>
-								<strong class="title-medium">이름</strong>
-								<span class="divide-list">
-									<span>부서명</span>
-									<span class="division h14 mx8"></span>
-									<span>직책</span>
-								</span>
-								<span class="company-name">회사명</span>
-							</button>
-							<figure>
-								<div class="due-date">
-									<strong class="body-small">만료일</strong>
-									<div class="tags tags-small tags-lightBlue">D-30</div>
-								</div>
-								<div class="thumb">
-									<button type="button" class="btn-xsmall btn-black btn-round" onclick="toastr.success(``, '연장되었습니다.');">연장하기</button>
-									<picture>
-										<source srcset="/resources/@temp/thumb_w.png">
-										<img src="/resources/@temp/thumb_w.png" alt="">
-									</picture>
-								</div>
-							</figure>
-						</div>
-						<div class="business-card-customer">
-							<button>
-								<strong class="title-medium">이름</strong>
-								<span class="divide-list">
-									<span>부서명</span>
-									<span class="division h14 mx8"></span>
-									<span>직책</span>
-								</span>
-								<span class="company-name">회사명</span>
-							</button>
-							<figure>
-								<div class="due-date">
-									<strong class="body-small">만료일</strong>
-									<div class="tags tags-small tags-lightBlue">D-30</div>
-								</div>
-								<div class="thumb">
-									<button type="button" class="btn-xsmall btn-black btn-round" onclick="toastr.success(``, '연장되었습니다.');">연장하기</button>
-									<picture>
-										<source srcset="/resources/@temp/thumb_w.png">
-										<img src="/resources/@temp/thumb_w.png" alt="">
-									</picture>
-								</div>
-							</figure>
-						</div>
-						<div class="business-card-customer">
-							<button>
-								<strong class="title-medium">이름</strong>
-								<span class="divide-list">
-									<span>부서명</span>
-									<span class="division h14 mx8"></span>
-									<span>직책</span>
-								</span>
-								<span class="company-name">회사명</span>
-							</button>
-							<figure>
-								<div class="due-date">
-									<strong class="body-small">만료일</strong>
-									<div class="tags tags-small tags-lightBlue">D-30</div>
-								</div>
-								<div class="thumb">
-									<button type="button" class="btn-xsmall btn-black btn-round" onclick="toastr.success(``, '연장되었습니다.');">연장하기</button>
-									<picture>
-										<source srcset="/resources/@temp/thumb_w.png">
-										<img src="/resources/@temp/thumb_w.png" alt="">
-									</picture>
-								</div>
-							</figure>
-						</div>
-						<div class="business-card-customer">
-							<button>
-								<strong class="title-medium">이름</strong>
-								<span class="divide-list">
-									<span>부서명</span>
-									<span class="division h14 mx8"></span>
-									<span>직책</span>
-								</span>
-								<span class="company-name">회사명</span>
-							</button>
-							<figure>
-								<div class="due-date">
-									<strong class="body-small">만료일</strong>
-									<div class="tags tags-small tags-lightBlue">D-30</div>
-								</div>
-								<div class="thumb">
-									<button type="button" class="btn-xsmall btn-black btn-round" onclick="toastr.success(``, '연장되었습니다.');">연장하기</button>
-									<picture>
-										<source srcset="/resources/@temp/thumb_w.png">
-										<img src="/resources/@temp/thumb_w.png" alt="">
-									</picture>
-								</div>
-							</figure>
-						</div>
-						<div class="business-card-customer">
-							<button>
-								<strong class="title-medium">이름</strong>
-								<span class="divide-list">
-									<span>부서명</span>
-									<span class="division h14 mx8"></span>
-									<span>직책</span>
-								</span>
-								<span class="company-name">회사명</span>
-							</button>
-							<figure>
-								<div class="due-date">
-									<strong class="body-small">만료일</strong>
-									<div class="tags tags-small tags-lightBlue">D-30</div>
-								</div>
-								<div class="thumb">
-									<button type="button" class="btn-xsmall btn-black btn-round" onclick="toastr.success(``, '연장되었습니다.');">연장하기</button>
-									<picture>
-										<source srcset="/resources/@temp/thumb_w.png">
-										<img src="/resources/@temp/thumb_w.png" alt="">
-									</picture>
-								</div>
-							</figure>
-						</div>
-						<div class="business-card-customer">
-							<button>
-								<strong class="title-medium">이름</strong>
-								<span class="divide-list">
-									<span>부서명</span>
-									<span class="division h14 mx8"></span>
-									<span>직책</span>
-								</span>
-								<span class="company-name">회사명</span>
-							</button>
-							<figure>
-								<div class="due-date">
-									<strong class="body-small">만료일</strong>
-									<div class="tags tags-small tags-lightBlue">D-30</div>
-								</div>
-								<div class="thumb">
-									<button type="button" class="btn-xsmall btn-black btn-round" onclick="toastr.success(``, '연장되었습니다.');">연장하기</button>
-									<picture>
-										<source srcset="/resources/@temp/thumb_w.png">
-										<img src="/resources/@temp/thumb_w.png" alt="">
-									</picture>
-								</div>
-							</figure>
-						</div>
-						<div class="business-card-customer">
-							<button>
-								<strong class="title-medium">이름</strong>
-								<span class="divide-list">
-									<span>부서명</span>
-									<span class="division h14 mx8"></span>
-									<span>직책</span>
-								</span>
-								<span class="company-name">회사명</span>
-							</button>
-							<figure>
-								<div class="due-date">
-									<strong class="body-small">만료일</strong>
-									<div class="tags tags-small tags-lightBlue">D-30</div>
-								</div>
-								<div class="thumb">
-									<button type="button" class="btn-xsmall btn-black btn-round" onclick="toastr.success(``, '연장되었습니다.');">연장하기</button>
-									<picture>
-										<source srcset="/resources/@temp/thumb_w.png">
-										<img src="/resources/@temp/thumb_w.png" alt="">
-									</picture>
-								</div>
-							</figure>
-						</div>
 
 						<div class="business-card-customer">
 							<button>
@@ -485,7 +221,7 @@
 		<!-- bottom-btn -->
 		<div class="bottom-btn">
 			<div class="btn-wrap">
-				<button type="button" class="btn-large btn-primary" data-micromodal-trigger="modal-businesscard-customer-regist"><i class="ico-add"></i>고객 명함 등록</button>
+				<button type="button" class="btn-large btn-primary"><i class="ico-add"></i>고객 명함 등록</button>
 			</div>
 		</div>
 		<!-- //bottom-btn -->
@@ -538,268 +274,6 @@
 	<!-- //micromodal -->
 
 
-	<!-- micromodal -->
-	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-businesscard-customer-regist" aria-hidden="true">
-		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
-			<div class="modal__container" role="dialog" aria-modal="true">
-
-				<div class="modal__header">
-					<strong class="modal__title title-large">고객 명함 등록 </strong>
-					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
-				</div>
-				<div class="modal__content">
-
-					<div class="content">
-
-						<!-- group -->
-						<div class="group-form mt16">
-							<div class="group-title">
-								<strong class="title-medium">고객 명함 이미지</strong>
-							</div>
-							<div class="group-content mt8">
-								<!-- upload-picture -->
-								<div class="upload-picture">
-									<div class="upload-type-select">
-										<button type="button" class="upload-gallery">갤러리</button>
-										<button type="button" class="upload-camera" onclick="swalFire()">카메라</button>
-									</div>
-								</div>
-								<!-- //upload-picture -->
-
-								<!-- upload-picture -->
-								<div class="upload-picture">
-									<picture>
-										<source srcset="/resources/images/@temp/@business_card.png">
-										<img src="/resources/images/@temp/@business_card.png" alt="">
-									</picture>
-									<div class="picture-dimmed">
-										<button type="button" class="btn-noborder text-shadow"><i class="ico-delete-shadow"></i>삭제</button>
-									</div>
-								</div>
-								<!-- //upload-picture -->
-
-								<!-- upload-picture -->
-								<div class="upload-picture">
-									<picture>
-										<source srcset="/resources/@temp/thumb_h.png">
-										<img src="/resources/@temp/thumb_h.png" alt="">
-									</picture>
-									<div class="picture-dimmed">
-										<button type="button" class="btn-noborder text-shadow"><i class="ico-delete-shadow"></i>삭제</button>
-									</div>
-								</div>
-								<!-- //upload-picture -->
-							</div>
-						</div>
-						<!-- //group -->
-
-
-
-						<!-- group -->
-						<div class="group-form mt40">
-							<div class="group-title pl8 pr16 py16 bg-surface-surface50 br8">
-								<strong class="title-medium gap6"><i class="icon-only icon-20 icon-keyman"></i>키맨</strong>
-								<div class="inp inp-toggle-large">
-									<label>
-										<input type="checkbox" aria-label="키맨">
-									</label>
-								</div>
-							</div>
-						</div>
-						<!-- //group -->
-
-						<!-- group-form -->
-						<div class="group-form mt40">
-							<div class="group-title">
-								<strong class="title-medium">이름 <i class="apos" aria-label="필수 입력">*</i></strong>
-							</div>
-							<div class="group-content">
-								<div class="form">
-									<div class="label"></div>
-									<div class="input-wrap">
-										<input type="search" aria-label="이름" placeholder="">
-									</div>
-									<p class="validate-text"></p>
-								</div>
-							</div>
-						</div>
-						<!-- //group-form -->
-
-						<!-- group-form -->
-						<div class="group-form mt40">
-							<div class="group-title">
-								<strong class="title-medium">회사 <i class="apos" aria-label="필수 입력">*</i></strong>
-							</div>
-							<div class="group-content">
-								<div class="form">
-									<div class="label"></div>
-									<div class="input-wrap">
-										<input type="search" aria-label="회사" placeholder="">
-									</div>
-									<p class="validate-text"></p>
-								</div>
-							</div>
-						</div>
-						<!-- //group-form -->
-
-						<!-- group-form -->
-						<div class="group-form mt40">
-							<div class="group-title">
-								<strong class="title-medium">휴대폰 번호 <i class="apos" aria-label="필수 입력">*</i></strong>
-							</div>
-							<div class="group-content">
-								<div class="form">
-									<div class="label"></div>
-									<div class="input-wrap input-btn">
-										<input type="tel" aria-label="휴대폰 번호" placeholder="‘-’ 없이 숫자만 입력">
-										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
-									</div>
-									<p class="validate-text"></p>
-								</div>
-							</div>
-						</div>
-						<!-- //group-form -->
-
-						<!-- group-form -->
-						<div class="group-form mt40">
-							<div class="group-title">
-								<strong class="title-medium">부서 <i class="apos" aria-label="필수 입력">*</i></strong>
-							</div>
-							<div class="group-content">
-								<div class="form">
-									<div class="label"></div>
-									<div class="input-wrap">
-										<input type="search" aria-label="부서" placeholder="">
-									</div>
-									<p class="validate-text"></p>
-								</div>
-							</div>
-						</div>
-						<!-- //group-form -->
-
-						<!-- group-form -->
-						<div class="group-form mt40">
-							<div class="group-title">
-								<strong class="title-medium">직책</strong>
-							</div>
-							<div class="group-content">
-								<div class="form">
-									<div class="label"></div>
-									<div class="input-wrap input-btn">
-										<input type="search" aria-label="직책" placeholder="">
-										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
-									</div>
-									<p class="validate-text"></p>
-								</div>
-							</div>
-						</div>
-						<!-- //group-form -->
-
-						<!-- group-form -->
-						<div class="group-form mt40">
-							<div class="group-title">
-								<strong class="title-medium">이메일</strong>
-							</div>
-							<div class="group-content">
-								<div class="form">
-									<div class="label"></div>
-									<div class="input-wrap input-btn">
-										<input type="email" aria-label="이메일" placeholder="">
-										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
-									</div>
-									<p class="validate-text"></p>
-								</div>
-							</div>
-						</div>
-						<!-- //group-form -->
-
-						<!-- group-form -->
-						<div class="group-form mt40">
-							<div class="group-title">
-								<strong class="title-medium">전화번호</strong>
-							</div>
-							<div class="group-content">
-								<div class="form">
-									<div class="label"></div>
-									<div class="input-wrap input-btn">
-										<input type="tel" aria-label="전화번호" placeholder="">
-										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
-									</div>
-									<p class="validate-text"></p>
-								</div>
-							</div>
-						</div>
-						<!-- //group-form -->
-
-						<!-- group-form -->
-						<div class="group-form mt40">
-							<div class="group-title">
-								<strong class="title-medium">팩스번호</strong>
-							</div>
-							<div class="group-content">
-								<div class="form">
-									<div class="label"></div>
-									<div class="input-wrap input-btn">
-										<input type="tel" aria-label="팩스번호" placeholder="">
-										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
-									</div>
-									<p class="validate-text"></p>
-								</div>
-							</div>
-						</div>
-						<!-- //group-form -->
-
-						<!-- group-form -->
-						<div class="group-form mt40">
-							<div class="group-title">
-								<strong class="title-medium">주소</strong>
-							</div>
-							<div class="group-content">
-								<div class="form">
-									<div class="label"></div>
-									<div class="input-wrap">
-										<input type="search" aria-label="주소">
-									</div>
-									<p class="validate-text"></p>
-								</div>
-							</div>
-						</div>
-						<!-- //group-form -->
-
-						<!-- group-form -->
-						<div class="group-form mt40">
-							<div class="group-title flex-column a-start">
-								<strong class="title-medium">메모</strong>
-								<div class="inp inp-medium my10">
-									<label>
-										<input type="checkbox">
-										<span class="label-title">나만보기</span>
-									</label>
-								</div>
-							</div>
-							<div class="group-content">
-								<div class="form">
-									<div class="input-wrap">
-										<textarea aria-label="메모"></textarea>
-									</div>
-									<div class="textarea-length">0/300자</div>
-								</div>
-							</div>
-						</div>
-						<!-- //group-form -->
-
-						<p class="descrip
-                        tion error body-small mt40 fc-typography-caption">등록된 고객명함은 현재 소속 지점으로 등록되어 지점 이동 후에는 조회하실 수 없습니다. <br> 개인정보 또는 부적절한 내용 작성을 금지하며, 마케팅 정보로 이용할 수 없습니다.</p>
-						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-primary" onclick="toastr.success('', '저장되었습니다.')" data-micromodal-close><i class="ico-check"></i>저장</button>
-						</div>
-					</div>
-
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- //micromodal -->
 
 
 	<script>
